# Valkyrie

./: .gitignore  .gitmodules  CMakeLists.txt  COPYING  README.md  Valkyrie.sln  Valkyrie.vcxproj  Valkyrie.vcxproj.filters
BlenderExporterAddon/: lavy.py
SDL2/: SDL2.vcxproj  SDL2.vcxproj.filters
Valkyrie/: CMakeLists.txt  Valkyrie.vcxproj  Valkyrie.vcxproj.filters
Valkyrie/source/: base_unit.cpp  depth_buffer.cpp  descriptor.cpp  device.cpp  memory_buffer.cpp  memory_chunk.cpp  memory_texture.cpp  physical_device.cpp  pipeline.cpp  png.cpp  png_texture.cpp  queue.cpp  render_context.cpp  render_function.cpp  render_pass.cpp  renderer.cpp  rgba32_memory.cpp  shader.cpp  stb_texture.cpp  surface.cpp  swapchain.cpp  texture.cpp  thread.cpp  transform.cpp  user_input.cpp  valkyrie.cpp  valkyrie_stb.cpp  vertex_input.cpp  vulkan_debug.cpp  wendy.cpp
Valkyrie/source/UI/: user_input.cpp  window.cpp  window_manager.cpp
Valkyrie/source/asset/: asset_manager.cpp  gltf_asset.cpp  gltf_loader.cpp  lavy_asset.cpp  lavy_loader.cpp  mesh_asset.cpp  rgba32_memory.cpp
Valkyrie/source/component/: camera_component.cpp  component_attacher.cpp  mesh.cpp  mesh_renderer.cpp
Valkyrie/source/factory/: factory.cpp  mesh.cpp  mesh_factory.cpp  object_factory.cpp
Valkyrie/source/file_system/: utility.cpp
Valkyrie/source/graphics/: pipeline.cpp  pipeline_initializer.cpp  renderer.cpp
Valkyrie/source/graphics_api_support/: attribute.cpp
Valkyrie/source/scene/: bounding_box.cpp  camera.cpp  light.cpp  light_directional.cpp  light_position.cpp  light_shader_writer.cpp  light_spot.cpp  object.cpp  object_manager.cpp  transform.cpp
Valkyrie/source/thread/: thread.cpp  thread_manager.cpp
Valkyrie/source/utility/: base_unit.cpp  memory_chunk.cpp  sdl_manager.cpp  task_manager.cpp  vulkan_manager.cpp
Valkyrie/source/vulkan/: command_buffer.cpp  command_pool.cpp  debug.cpp  depth_buffer.cpp  descriptor.cpp  device.cpp  image.cpp  instance.cpp  memory_buffer.cpp  memory_texture.cpp  physical_device.cpp  pipeline.cpp  pipeline_module.cpp  queue.cpp  render_pass.cpp  shader.cpp  surface.cpp  swapchain.cpp  texture.cpp  thread.cpp  vertex_input.cpp
ValkyriePlayground/: .gitignore  CMakeLists.txt  ValkyriePlayground.vcxproj  ValkyriePlayground.vcxproj.filters  compile_shader.sh  frag.spv  imgui.frag  main.cpp  shader.frag  shader.frag.spv  shader.vert  shader.vert.spv
ValkyriePlayground/package/: shader.sd  spv.frag.sr  spv.vert.sr
ValkyriePlayground/package/assets/: duck.lavy.json
doc/: Doxyfile
electron/: binding.gyp  imgui.frag.spv  package.json  shader.frag  test.cpp  valkyrie.cpp  valkyrie.js
glfw/: glfw.vcxproj  glfw.vcxproj.filters
gtest/: gtest.vcxproj  gtest.vcxproj.filters
libpng/: libpng.vcxproj  libpng.vcxproj.filters
license/: zlib
valkyrie_test/: .gitignore  main.cpp  valkyrie_test.vcxproj
zlib/: zlib.vcxproj  zlib.vcxproj.filters
